--- a/style/myStyle.css
+++ b/style/myStyle.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: mediumslateblue;
+  background-color: rgb(65, 44, 187);
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
